# src/auth/dto/refresh-token.dto.ts
@@ -1,9 +1,0 @@
-import { IsString } from 'class-validator';
-import { RefreshTokenDto as RefreshTokenDtoInterface } from '../../types-and-interfaces';
-
-class RefreshTokenDto implements RefreshTokenDtoInterface {
-  @IsString()
-  refreshToken: string;
-}
-
-export { RefreshTokenDto };
