# src/auth/dto/token.dto.ts
@@ -1,0 +1,17 @@
+import { IsString } from 'class-validator';
+import {
+  RefreshTokenDto as RefreshTokenDtoInterface,
+  AllTokensDto as AllTokensDtoInterface,
+} from '../../types-and-interfaces';
+
+class RefreshTokenDto implements RefreshTokenDtoInterface {
+  @IsString()
+  refreshToken: string;
+}
+
+class AllTokensDto extends RefreshTokenDto implements AllTokensDtoInterface {
+  @IsString()
+  accessToken: string;
+}
+
+export { RefreshTokenDto, AllTokensDto };
